fix bullet spacing again

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -24,7 +24,7 @@ $huge: 1.8em;
 
 $p_margin: 1.1em;
 $p_huge_margin: 0.3em;
-$point_margin: 0.3em;
+$point_margin: 0.5em;
 $footnote_point_margin: 0.7em;
 
 $huge_desktop: 2.2em;
@@ -153,6 +153,7 @@ $comment_dimensions: 1.5em;
 
   ol,
   ul {
+    line-height: 1.3;
     margin: $point_margin 0 1.5em $p_margin;
 
     li {
